jwt gen added
