# auth-service/internal/controller/http/v1/request/sign_in.go
@@ -1,0 +1,6 @@
+package request
+
+type SignIn struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
